# rust-crud-actix-mongo-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  run.sh  security.rs  test_controller.rs
src/: main.rs  test_controller.rs
src/auth/: controller.rs  mod.rs  models.rs  service.rs
src/environment/: mod.rs
src/users/: controller.rs  mod.rs  models.rs  service.rs
